JOORSAND/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountNamePrechat__c</fullName>
        <description>Custom field for pre-chat form</description>
        <label>Account Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Competitor_Source_From_Lead__c</fullName>
        <description>Because Competitor Source is a controlled picklist based on Account Source, it cannot map a value to it on conversion because the Account Source isn&apos;t technically Competitor yet, it need to set and then fire. This field receives Competitor Source instead of the main field, and then a Process Builder updates that field after the fact.</description>
        <label>Competitor Source From Lead</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Source__c</fullName>
        <description>Dependent on Lead Source being &quot;Competitor&quot;.</description>
        <inlineHelpText>Input when the Account Source is Competitor.</inlineHelpText>
        <label>Competitor Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NuOrder</fullName>
                </value>
                <value>
                    <fullName>Le New Black</fullName>
                </value>
                <value>
                    <fullName>Ordre</fullName>
                </value>
                <value>
                    <fullName>Anatwine</fullName>
                </value>
                <value>
                    <fullName>Pepperi</fullName>
                </value>
                <value>
                    <fullName>Brandboom</fullName>
                </value>
                <value>
                    <fullName>Brandlab</fullName>
                </value>
                <value>
                    <fullName>INTURN</fullName>
                </value>
                <value>
                    <fullName>Monkey N Middle</fullName>
                </value>
                <value>
                    <fullName>Pop Market</fullName>
                </value>
                <value>
                    <fullName>Threadvine</fullName>
                </value>
                <value>
                    <fullName>Uppler</fullName>
                </value>
                <value>
                    <fullName>World on a Hanger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Authority__c</fullName>
        <description>Sales philosophy around the authority of a contact based on title seniority. Director title and above is considered &quot;Above The Line&quot;, where all others are &quot;Below The Line&quot;. The more Above The Line people you&apos;re talking to at your clients, the stronger the relationship and the more likely it is to close business with.</description>
        <formula>IF(ISBLANK(Title), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;NO JOB TITLE&quot;)+&quot; MISSING JOB TITLE&quot;, 

IF( 
OR( 
CONTAINS(Title, &quot;Head&quot;), 
CONTAINS(Title, &quot;Director&quot;), 
CONTAINS(Title, &quot;VP&quot;), 
CONTAINS(Title, &quot;CMO&quot;), 
CONTAINS(Title, &quot;Vice President&quot;), 
CONTAINS(Title, &quot;Chief&quot;), 
CONTAINS(Title, &quot;Founder&quot;), 
CONTAINS(Title, &quot;Managing Director&quot;), 
CONTAINS(Title, &quot;President&quot;), 
CONTAINS(Title, &quot;GM&quot;), 
CONTAINS(Title, &quot;COO&quot;), 
CONTAINS(Title, &quot;CFO&quot;), 
CONTAINS(Title, &quot;coo&quot;), 
CONTAINS(Title, &quot;cfo&quot;), 
CONTAINS(Title, &quot;cmo&quot;), 
CONTAINS(Title, &quot;director&quot;), 
CONTAINS(Title, &quot;vice president&quot;), 
CONTAINS(Title, &quot;vp&quot;), 
CONTAINS(Title, &quot;CEO&quot;), 
CONTAINS(Title, &quot;ceo&quot;), 
CONTAINS(Title, &quot;Direc.&quot;), 
CONTAINS(Title, &quot;Owner&quot;), 
CONTAINS(Title, &quot;head&quot;), 
CONTAINS(Title, &quot;president&quot;), 
CONTAINS(Title, &quot;managing director&quot;), 
CONTAINS(Title, &quot;gm&quot;), 
CONTAINS(Title, &quot;owner&quot;), 
CONTAINS(Title, &quot;direc.&quot;), 
CONTAINS(Title, &quot;dir.&quot;), 
CONTAINS(Title, &quot;chief&quot;), 
CONTAINS(Title, &quot;founder&quot;), 
CONTAINS(Title, &quot;General Manager&quot;), 
CONTAINS(Title, &quot;CIO&quot;), 
CONTAINS(Title, &quot;Dir.&quot;) 
), 
IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;ATL&quot;)+&quot; Above The Line&quot;, 
IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;BTL&quot;)+&quot; Below The Line&quot; 
))</formula>
        <inlineHelpText>Director title and above is considered &quot;Above The Line&quot;, where all others are &quot;Below The Line&quot;. The more Above The Line people you&apos;re talking to, the stronger the relationship and the more likely it is you&apos;ll close business.</inlineHelpText>
        <label>Contact Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Counter__c</fullName>
        <description>For reporting. Look up &quot;Power of One&quot; Salesforce articles.</description>
        <formula>1</formula>
        <label>Contact Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Date of the last completed activity.</description>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT(Owner.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <description>Test Description</description>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Contact_Authority__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Contact_Authority__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts_Touched_This_Last_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Contact_Authority__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Last_Activity_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK,LAST_WEEK</value>
        </filters>
        <label>My Contacts Touched This/Last Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>